fix padding and gaps on trade table and referrals

--- a/packages/frontend/app/components/PageHeader/PageHeader.module.css
+++ b/packages/frontend/app/components/PageHeader/PageHeader.module.css
@@ -131,7 +131,7 @@
     display: flex;
     flex-direction: row;
     height: 25px;
-    padding: 4px;
+    padding: var(--padding-xs);
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
@@ -152,7 +152,7 @@
     width: 45px;
     display: flex;
     height: 25px;
-    padding: 4px;
+    padding: var(--padding-xs);
     align-items: center;
     gap: 4px;
     border-radius: var(--radius-s, 8px);
@@ -173,7 +173,7 @@
     display: flex;
     justify-content: center;
     height: 25px;
-    padding: 4px;
+    padding: var(--padding-xs);
     align-items: center;
     gap: 4px;
     border-radius: var(--radius-s, 8px);
