--- a/packages/frontend/app/components/PageHeader/WalletDropdown/WalletDropdown.module.css
+++ b/packages/frontend/app/components/PageHeader/WalletDropdown/WalletDropdown.module.css
@@ -43,7 +43,7 @@
     display: flex;
     flex-direction: row;
     height: 25px;
-    padding: 4px;
+    padding: var(--padding-xs);
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
