--- a/packages/frontend/app/components/Trade/OrderInput/LeverageSlider/LeverageSlider.module.css
+++ b/packages/frontend/app/components/Trade/OrderInput/LeverageSlider/LeverageSlider.module.css
@@ -147,5 +147,5 @@
     border: none;
     background: var(--accent1);
     color: var(--text1);
-    padding: 4px;
+    padding: var(--padding-xs);
 }
