--- a/packages/frontend/app/components/Trade/OrderInput/ScaleOrders/ScaleOrders.module.css
+++ b/packages/frontend/app/components/Trade/OrderInput/ScaleOrders/ScaleOrders.module.css
@@ -180,7 +180,6 @@
 }
 
 .orderList {
-    background-color: yellow;
     width: 100%;
     height: var(--scale-order-height);
     overflow-y: auto;
